--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3,7 +3,7 @@
 
 en:
   home: "Home" 
-  about: "about"
+  about: "program"
   sponsor: "sponsors"
   speaker: "speakers"
   event_date: "May 21st,2009"
