--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -12,6 +12,8 @@
   location: "中国 上海"
   venue: "光大会展中心10号厅" 
   address: "中国上海漕宝路66号B座5楼" 
+  thanks: '非常感谢'
+  signup_success: '非常感谢您关注本次会议，我们已经收到您的参会申请，请留意您的信箱，我们将在5月10号左右发出参会邀请函，由于参加人数较多，邀请函将根据先到先得得方式发送。'
   
   date:
     formats:
