--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,7 +4,7 @@
 en:
   home: "Home" 
   about: "program"
-  sponsor: "sponsors"
+  sponsor: "Sponsors"
   speaker: "speakers"
   event_date: "May 21st,2009"
   location: "Shanghai China"
