--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,7 +37,7 @@ en:
   ja: Japan
   robbin: Robbin fan
   yuanyi: Yuanyi zhang
-  ouspec: 欧阳瑞芳
+  ouspec: ouspec
   koz: Koz Masumitsu
   scott: Scott Ballantyne
   email: E-mail
