--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -20,10 +20,39 @@
   state: '省 *'
   country: '国家 *' 
   company: '公司 *'
+  title: '职位 *'
+  choose_title: '请选择你的职位'
+  CTO: 'CTO'
+  project_manager: '项目经理'
+  architect: '架构师'
+  senior_engineer: '高级工程师'
+  engineer: '工程师'
+  student: '学生'
+  company_category: '公司类型 *'
+  choose_company_category: '请选择您的公司类型'
+  foreign_company: '外企'
+  private_company: '私营企业'
+  state_owned_company: '国有企业'
+  company_size: '公司规模 *'
+  choose_company_size: '请选择您的公司规模'
+  industry: '行业 *'
+  choose_industry: '请选择您的行业'
+  work_experience: '工作经验 *'
+  choose_work_experience: '请选择您的工作经验'
+  web: '互联网'
+  profession_software: '传统行业软件'
+  erp: 'ERP'
+  game_development: '游戏开发'
+  media: '媒体'
+  e_commerce: '电子商务'
+  other: '其它'
+  ruby_experience: 'Ruby经验 *'
+  choose_ruby_experience: '请选择您的Ruby经验'
+  interesting: '兴趣'
   registion: '占个座'
   description: '介绍'
   website: 网站/博客
-  phone: 联系电话
+  phone: 联系电话 *
   submit: 提交
   orgnizer: 组织者
   be_sponsor: 参与赞助  
@@ -40,7 +69,7 @@
   ouspec: 欧阳瑞芳
   koz: 増満工将(koz)
   scott: Scott Ballantyne
-  email: 电子邮件
+  email: 电子邮件 *
   tel: 电话
   mob: 手机
   help: 任何帮助
@@ -158,7 +187,7 @@
           company: '公司'
           description: '介绍'
           website: 网站/博客
-          phone: 联系电话
+          phone_number: 联系电话
           submit: 提交
     errors:
       template:
