--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -189,6 +189,13 @@
           website: 网站/博客
           phone_number: 联系电话
           submit: 提交
+          industry: 行业
+          company_category: 公司类型 
+          company_size: 公司规模 
+          work_experience: 工作经验
+          ruby_experience: Ruby经验
+          interesting: 兴趣爱好
+          title: 职位
     errors:
       template:
         header: 
