--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -7,6 +7,11 @@
   loc: '地点'
   register: 注册 
   sponsor: "赞助商"
+  diamond_sponsor: '钻石赞助商'
+  platinum_sponsor: '白金赞助商'
+  golden_sponsor: '黄剑赞助商'
+  silver_sponsor: '白银赞助商'
+  partner: '合作伙伴'
   speaker: "演讲者"
   event_date: "2009年5月21号"
   location: "中国 上海"
