--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -9,7 +9,7 @@
   sponsor: "赞助商"
   diamond_sponsor: '钻石赞助商'
   platinum_sponsor: '白金赞助商'
-  golden_sponsor: '黄剑赞助商'
+  golden_sponsor: '黄金赞助商'
   silver_sponsor: '白银赞助商'
   partner: '合作伙伴'
   speaker: "演讲者"
